--- a/src/CursoOnline.Web/appsettings.Development.json
+++ b/src/CursoOnline.Web/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionString": "Server=localhost,1433;Database=cursoonline;User ID=sa;Password=1q2w3e4r@#$;Encrypt=False;"
 }
