--- a/src/CursoOnline.Web/appsettings.json
+++ b/src/CursoOnline.Web/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "Server=localhost,1433;Database=cursoonline;User ID=sa;Password=1q2w3e4r@#$;Encrypt=False;"
 }
