--- a/src/CursoOnline.Web/appsettings.Development.json
+++ b/src/CursoOnline.Web/appsettings.Development.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionString": "Server=localhost,1433;Database=cursoonline;User ID=sa;Password=1q2w3e4r@#$;Encrypt=False;"
+  "ConnectionString": "Server=localhost,1433;Database=CursoOnline;User ID=sa;Password=1q2w3e4r@#$;Encrypt=False;"
 }
