--- a/src/CursoOnline.Web/appsettings.json
+++ b/src/CursoOnline.Web/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Server=localhost,1433;Database=cursoonline;User ID=sa;Password=1q2w3e4r@#$;Encrypt=False;"
+  "ConnectionString": "Server=localhost,1433;Database=CursoOnline;User ID=sa;Password=1q2w3e4r@#$;Encrypt=False;"
 }
